Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignObjectUndefined.quorum
Object x = undefined
Object o = cast(Object, x)

if o = undefined
    output "success"
end