Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignNumObjUndefined.quorum
Number x = undefined
Number i = cast(Number, x)